--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <p>Coding is something new to our Naga society and is not that common. But I can't denied the fact that there will be someone out there who are pro-coders.</p>
 <p>Coding sometime can be frustrating and sometime rewarding but we must have COMPANION to share our idea and skill to keep the journey alive.</p>    
 <p> Hence I'm trying to built a common platform do keep our coding alive and draw new coders.</p><br>
-    <h2>Challengesfor the coders</h2>
+    <h2>Challenges For The Coders</h2>
     <p>
         The coding landscape in Nagaland can be challenging, burdened by technological limitations and, at times, a lack of understanding. <br><br>
         This can lead to a sense of isolation for those passionate about programming. However,we will try to address this very need. We're building a space where we tackle these issues head-on, sharing resources, troubleshooting together, and providing the necessary encouragement to flourish.<br><br>
