--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
      crossorigin="anonymous"></script>
     
     <meta charset="UTF-8">
+    <meta name="description" content="Join the Nagaland Coders community! Connect with fellow programmers, share resources, tackle coding challenges, and find job opportunities.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nagaland coders</title>
     <link rel="stylesheet" href="1.css">
