--- a/index.html
+++ b/index.html
@@ -62,23 +62,20 @@
     </header>
 
     <section class="hero">
-        <div class="container">
-            <h1>< Welcome ></h1>
-            <div class="scroll-down">
-             <!-- The href here -->
-              <a href="https://chat.whatsapp.com/J82xPaYiK63BpYzpGDGYEw" style="color: purple;">
-                <i class="fas fa-chevron-down"></i>
-              </a>
-            </div>
-            <div class="hero-image">
-                <img src="hero.jpg" id="specialImage"alt="Nagaland Coders">
-            </div>
-            <div class="whatlink">
-                <h2>WhatsApp Community Group</h2>
-                <h1>JOIN NOW!</h1>
-                <p>↓Click below↓ </p>
-            </div>
+    <div class="container">
+        <h1>Welcome to the Nagaland Coders Community!</h1>
+        <p class="hero-subtitle">Connect, Learn, and Grow Your Coding Skills with Fellow Enthusiasts in Nagaland.</p>
+        <div class="hero-cta">
+            <h2>Ready to Dive In? Join Our WhatsApp Community Group!</h2>
+            <a href="https://chat.whatsapp.com/J82xPaYiK63BpYzpGDGYEw" class="button primary">
+                Join Now on WhatsApp <i class="fas fa-chevron-right"></i>
+            </a>
+            <p class="learn-more">Click to connect and start your journey to learn coding with us!</p>
         </div>
+        <div class="hero-image">
+            <img src="hero.jpg" id="specialImage" alt="Nagaland Coders Community">
+        </div>
+    </div>
     </section>
       <div id="pop">
         <a href="https://www.instagram.com/alien_q7?igsh=bmI3cW95OG9kMWw3">
