--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             </nav>
         </div>
     </header>
-    <div class="hero-meta" style="color: #800080; margin-top: 10px;">
-        Apr 15, 2025 - by Alien - Estimated Read Time: 7-10 mins
+    <div class="hero-meta" style="text-align: left; color: #800080; margin-top: 10px;">
+        <strong>Apr 15, 2025 - by Alien - Estimated Read Time: 7-10 mins</strong>
     </div>
 
 
